@startuml
'https://plantuml.com/class-diagram

interface Response{
    + Boolean isSuccessful()
}
class CorrectResponse<T>{
    + Boolean isSuccessful()
    + T newObject()
}
class IncorrectResponse{
    + Boolean isSuccessful()
    + String error()
}

Response <|.. CorrectResponse
Response <|.. IncorrectResponse

@enduml